update with 8 changes

--- a/note/python-bitstring.html
+++ b/note/python-bitstring.html
@@ -121,6 +121,9 @@ Bits(<span style="color: #98be65;">'0x01'</span>)
 <div id="outline-container-28a78c80" class="outline-2">
 <h2 id="28a78c80">BitArray</h2>
 <div class="outline-text-2" id="text-28a78c80">
+<p>
+이름처럼 하나 이상의 Bit로 구성된 데이터를 구성하기 위한 용도의 클래스다.
+</p>
 <div class="org-src-container">
 <pre class="src src-python">&gt;&gt;&gt; <span style="color: #dcaeea;">ba</span> = BitArray(<span style="color: #98be65;">'0xff'</span>)
 &gt;&gt;&gt; ba
@@ -136,6 +139,9 @@ BitArray(<span style="color: #98be65;">'0xffaa'</span>)
 b<span style="color: #98be65;">'\xff\xaa'</span>
 </pre>
 </div>
+<p>
+여러 타입으로 변환도 지원하기 때문에 활용도는 높을 것 같다.
+</p>
 </div>
 </div>
 <div id="outline-container-94121c5e" class="outline-2">
@@ -191,6 +197,16 @@ BitStream(<span style="color: #98be65;">'0x01020304'</span>)
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+</div>
+<div class="backlinks-container">
+<hr /><h1>이 글을 링크하는 글들</h1>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/python.html">Python</a></h2>
+<div class="article-link-date">
+2020년 6월 5일 수정</div>
+</div>
+</div>
 </div>
 </section>
 <div class="side-ad-container">
