--- a/note/doom-emacs.html
+++ b/note/doom-emacs.html
@@ -56,7 +56,7 @@
 <section class="content">
 <header>
 <h1>Doom Emacs</h1>
-<div class="title-date">2020년 6월 2일 수정</div>
+<div class="title-date">2020년 6월 6일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
@@ -130,7 +130,7 @@ Doom Emacs도 <a href="spacemacs.html">Spacemacs</a>와 비슷하게
 <div class="outline-text-3" id="text-b622f862">
 <p>
 기본적으로 <code>~/.doom.d</code> 디렉터리를 개인 설정 파일 위치로 이용할 수 있다.
-이미 install 커맨드로 설치할 때 이미 보일러플레이트 코드들이 여기에 준비된다.
+이미 install 커맨드로 설치할 때 이미 <a href="boilerplate.html">보일러플레이트</a> 코드들이 여기에 준비된다.
 </p>
 </div>
 </div>
@@ -578,6 +578,13 @@ Package error: (error Could not find package hover in recipe repositories: (org-
 </div>
 <div class="backlinks-container">
 <hr /><h1>이 글을 링크하는 글들</h1>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/boilerplate.html">보일러플레이트</a></h2>
+<div class="article-link-date">
+2020년 6월 6일 수정</div>
+</div>
+</div>
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/vim.html">Vim</a></h2>
