--- a/note/dockerfile.html
+++ b/note/dockerfile.html
@@ -56,7 +56,7 @@
 <section class="content">
 <header>
 <h1>Dockerfile</h1>
-<div class="title-date">2020년 6월 4일 수정</div>
+<div class="title-date">2020년 6월 6일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
@@ -172,7 +172,7 @@ Dockerfile은 <a href="docker.html">Docker</a> 용 이미지를 빌드하기 위
 <div class="outline-text-2" id="text-0bbb90e1">
 <ul class="org-ul">
 <li><a target="_blank" href="https://github.com/gauthamp10/dockerfile-boilerplates">🌏dockerfile-boilerplates</a>:
-다양한 언어 별 Dockerfile 템플릿 보일러플레이트 코드가 올라와있는 저장소</li>
+다양한 언어 별 Dockerfile 템플릿 <a href="boilerplate.html">보일러플레이트</a> 코드들이 올라오는 저장소</li>
 </ul>
 </div>
 </div>
