update with 7 changes

--- a/note/chrome.html
+++ b/note/chrome.html
@@ -112,6 +112,13 @@ HTML5 표준 선정에 큰 영향을 끼쳐 공정하지 못하다는 비판도 
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/version.html">버전</a></h2>
+<div class="article-link-date">
+2020년 6월 7일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/safari.html">사파리</a></h2>
 <div class="article-link-date">
 2020년 5월 28일 수정</div>
