update with 1 changes

--- a/note/version.html
+++ b/note/version.html
@@ -64,7 +64,8 @@
 <li><a href="#8502a673">일반적인 구분</a></li>
 <li><a href="#2e3c3684">최신 버전 구분하기</a></li>
 <li><a href="#285775f0">버전에 영문자가 붙는 경우</a></li>
-<li><a href="#ea971653">버전에 영문자가 붙는 경우: RC 혹은 GM</a></li>
+<li><a href="#57081411">RC 버전?</a></li>
+<li><a href="#476f9884">GM 버전?</a></li>
 <li><a href="#eb70fdf0">특수한 버전 관례들</a></li>
 <li><a href="#ee851a2c">그 외 특수한 경우</a></li>
 </ul>
@@ -85,13 +86,13 @@
 <div class="outline-text-2" id="text-8502a673">
 <p>
 버전은 일반적으로 최소한 <code>x.y</code> 같이 점으로 구분되는 두 가지의 숫자로 구성된다.
-첫 숫자는 체계를 완전히 갈아 엎은 완전히 새롭게 만들어지거나
+첫 숫자 x는 체계를 완전히 갈아 엎은 완전히 새롭게 만들어지거나
 대규모 업데이트가 있을 경우 올라가고,
-그 이후의 숫자는 일반적인 기능 추가나 개선 등의 업데이트가 발생할 때마다 증가한다.
+그 이후의 숫자 y는 일반적인 기능 추가나 개선 등의 업데이트가 발생할 때마다 증가한다.
 </p>
 
 <p>
-<code>x.y.z</code> 처럼 세 가지 단위로 구분될 경우 가장 마지막의 숫자는
+<code>x.y.z</code> 처럼 세 가지 단위로 구분될 경우 가장 마지막의 숫자 z는
 기능적인 개선 보다는 버그 픽스가 발생할 때 올라가는 경우가 많다.
 </p>
 
@@ -101,7 +102,7 @@
 </p>
 
 <p>
-그저 최신일 수록 높은 숫자를 가진다는 것은 관례라고 생각하자.
+그저 최신일수록 높은 숫자를 가진다는 것은 관례라고 생각하자.
 </p>
 </div>
 </div>
@@ -109,24 +110,35 @@
 <h2 id="2e3c3684">최신 버전 구분하기</h2>
 <div class="outline-text-2" id="text-2e3c3684">
 <p>
-1.3와 1.12 두 가지 버전이 있다고 쳤을 때 어느 버전이 더 최신 버전일까?
+0.1과 1.0은 어떤게 최신일지는 대충 감이 온다. 1.0이 당연히 최신일 것이다.
 </p>
 
 <p>
-이 경우는 1.3 보다 1.12가 더 최신을 가능성이 높다.
-단순하게 비교하려면, 1.3을 1.03 이라고 생각하면 된다.
+그렇다면 1.3와 1.12 두 가지 버전이 있다고 쳤을 때 어느 버전이 더 최신 버전일까?
+</p>
+
+<p>
+이 경우는 1.3 보다 1.12가 더 최신일 가능성이 높다.
+단순하게 비교하려면 1.3을 1.03 이라고 생각하면 된다.
 </p>
 
 <p>
 버전은 실수 즉 수학에서 볼 수 있는 소숫점을 가진 숫자가 아니다.
 점의 갯수는 3개 이상이 될 때도 있다.
 예를 들어 1.0.1과 1.0.10은 수학에서는 존재할 수 없는 숫자다.
-거기다 이 둘은 다른 버전이다.
+당연히 숫자로 비교할 수가 없다.
 </p>
 
 <p>
-따라서 점 단위로 떼어서 각각의 숫자를 별개로 판단하되
-앞에서부터 순서대로 크기를 비교하는 편이 편하다.
+거기다 위 둘도 서로 다른 버전이다.
+앞서 이야기한 것처럼 1.0.1은 1.0.01이라고 생각하고 비교하는 게 좋다.
+따라서 이 경우 1.0.1보다 1.0.10이 최신 버전이다.
+</p>
+
+<p>
+버전을 최신 여부를 구분할 때는 점 단위로 떼어서 각각의 숫자를 별개로 판단하되
+앞에서부터 순서대로 크기를 비교하는 방식이 추천된다.
+당연히 앞자리가 크면 뒷자리는 더이상 비교하지 않아도 된다.
 </p>
 </div>
 </div>
@@ -141,12 +153,12 @@ b의 경우는 Beta 즉 공개 테스트 버전을 의미하는 경우가 많다
 </p>
 
 <p>
-물론 이 경우도 순전히 제조사 마음대로 붙일 수 있으니 오해해서는 안 된다.
+물론 이 경우도 순전히 제조사 마음대로 붙일 수 있으니 함부로 오해해서는 안 된다.
 </p>
 
 <p>
 영문자가 붙은 경우 숫자의 우위를 비교하기 힘든데,
-그냥 영문자를 떼고 우위를 생각하면 된다.
+개인적인 경험으론 영문자가 없는 버전은 정식 출시 버전이기 때문에 더 최신인 경우가 많았다.
 </p>
 
 <p>
@@ -155,25 +167,34 @@ b의 경우는 Beta 즉 공개 테스트 버전을 의미하는 경우가 많다
 </p>
 
 <p>
-참고로 요즘은 이런 영문자를 뒤에 붙이는 경우는 잘 없으니 이 항목은 무시해도 될지도 모른다.
+요즘은 이런 영문자를 뒤에 붙이는 경우는 잘 없으니 이 항목은 무시해도 될지도 모른다.
 </p>
 </div>
 </div>
-<div id="outline-container-ea971653" class="outline-2">
-<h2 id="ea971653">버전에 영문자가 붙는 경우: RC 혹은 GM</h2>
-<div class="outline-text-2" id="text-ea971653">
+<div id="outline-container-57081411" class="outline-2">
+<h2 id="57081411">RC 버전?</h2>
+<div class="outline-text-2" id="text-57081411">
 <p>
-버전 표기 근처에 RC 혹은 GM이라는 문자가 붙는 경우도 있다.
-</p>
-
-<p>
-RC는 Release Candidates의 약자다.
+버전 근처에 RC라는 단어가 붙는 경우도 있다.
+여기서 RC는 Release Candidates의 약자다.
 쉽게 말해서 '정식 릴리즈 후보' 라는 의미다.
 따라서 베타 버전과 비슷한 의미로 보는 것이 합당하다.
 </p>
 
 <p>
-GM은 Golden Master의 약자다.
+하지만 RC는 여러 버전이 나올 수 있다.
+RC1, RC2 처럼 말이다.
+하지만 RC 끼리 최신 버전을 구분하는 것은 의미가 없을 수도 있다.
+RC2가 나왔다가 RC1이 정식이 되는 경우가 없지는 않다.
+</p>
+</div>
+</div>
+<div id="outline-container-476f9884" class="outline-2">
+<h2 id="476f9884">GM 버전?</h2>
+<div class="outline-text-2" id="text-476f9884">
+<p>
+RC와 비슷하게 버전에 GM이라는 단어가 붙는 경우도 있다.
+여기서 GM은 Golden Master의 약자다.
 이 단어는 '미리 나왔지만 사실상 정식 버전' 이라는 의미로 해석할 수 있다.
 </p>
 
