update with 1 changes

--- a/note/rust.html
+++ b/note/rust.html
@@ -282,7 +282,7 @@ mutable_variable = <span style="color: #da8548; font-weight: bold;">30</span>;
 <p>
 shadowing은 Rust에서만 볼 수 있는 특수한 기능 같다.
 immutable 변수를 동일 이름으로 데이터를 변경 시키는 것이 가능한 것처럼 보이지만
-애초에 immutable은 동일한 메모리를 쓰지 않는 방식으로 데이터를 변경 시키는 것이 목적인 방식이라는 점만 알면
+애초에 immutable은 동일한 메모리를 쓰지 않는 방식으로 변조된 데이터를 얻는 것이 목적인 방식이라는 점만 알면
 이상할 것은 없는 것 같다.
 </p>
 
