--- a/note/doom-emacs.html
+++ b/note/doom-emacs.html
@@ -580,6 +580,13 @@ Package error: (error Could not find package hover in recipe repositories: (org-
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/ielm.html">ielm</a></h2>
+<div class="article-link-date">
+2020년 6월 8일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/boilerplate.html">보일러플레이트</a></h2>
 <div class="article-link-date">
 2020년 6월 6일 수정</div>
