--- a/note/shell.html
+++ b/note/shell.html
@@ -85,9 +85,16 @@
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/ielm.html">ielm</a></h2>
+<div class="article-link-date">
+2020년 6월 8일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/rust.html">Rust</a></h2>
 <div class="article-link-date">
-2020년 6월 3일 수정</div>
+2020년 6월 7일 수정</div>
 </div>
 </div>
 <div class="article-link">
