--- a/note/doom-emacs.html
+++ b/note/doom-emacs.html
@@ -56,7 +56,7 @@
 <section class="content">
 <header>
 <h1>Doom Emacs</h1>
-<div class="title-date">2020년 6월 6일 수정</div>
+<div class="title-date">2020년 6월 8일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
@@ -490,6 +490,7 @@ sync가 완료된 후 <a href="emacs.html">Emacs</a>를 재시작하고
 <dl class="org-dl">
 <dt><code>SPC m t</code></dt><dd>TO DO 마크 (띄어서 쓴 이유는 org agenda에 안 걸리게 하기 위함)</dd>
 <dt><code>SPC m p</code></dt><dd>우선순위(priority)</dd>
+<dt><code>SPC n s</code></dt><dd>노트(org) 검색</dd>
 </dl>
 </div>
 </div>
