update with 9 changes

--- a/note/doom-emacs.html
+++ b/note/doom-emacs.html
@@ -491,6 +491,7 @@ sync가 완료된 후 <a href="emacs.html">Emacs</a>를 재시작하고
 <dt><code>SPC m t</code></dt><dd>TO DO 마크 (띄어서 쓴 이유는 org agenda에 안 걸리게 하기 위함)</dd>
 <dt><code>SPC m p</code></dt><dd>우선순위(priority)</dd>
 <dt><code>SPC n s</code></dt><dd>노트(org) 검색</dd>
+<dt><code>SPC n r f</code></dt><dd>Org Roam 문서 제목으로 파일 열기</dd>
 </dl>
 </div>
 </div>
@@ -581,6 +582,13 @@ Package error: (error Could not find package hover in recipe repositories: (org-
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/magit.html">Magit</a></h2>
+<div class="article-link-date">
+2020년 6월 8일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/ielm.html">ielm</a></h2>
 <div class="article-link-date">
 2020년 6월 8일 수정</div>
@@ -605,13 +613,6 @@ Package error: (error Could not find package hover in recipe repositories: (org-
 <h2><a class="article-link-title" href="/note/org-mode.html">Org Mode</a></h2>
 <div class="article-link-date">
 2020년 5월 29일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/magit.html">Magit</a></h2>
-<div class="article-link-date">
-2020년 5월 28일 수정</div>
 </div>
 </div>
 <div class="article-link">
