--- a/note/index.html
+++ b/note/index.html
@@ -58,6 +58,20 @@
 <h1><i class="material-icons md-light">list_alt</i> NOTE의 모든 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/html-minifier.html">html-minifier</a></h2>
+<div class="article-link-date">
+2020년 6월 9일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/csso.html">csso</a></h2>
+<div class="article-link-date">
+2020년 6월 9일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/git.html">Git</a></h2>
 <div class="article-link-date">
 2020년 6월 8일 수정</div>
