update with 6 changes

--- a/note/html-minifier.html
+++ b/note/html-minifier.html
@@ -86,7 +86,7 @@ html-minifier는 이름에서 느낄 수 있듯이
 </div>
 <p>
 로컬 패키지로 쓰려면 <code>-g</code> 플래그만 빼도 될 것 같다.
-근데 라이브러리 용도로 쓸거면 차라리 webpack을 쓰는 게 나을 것 같은데&#x2026;
+근데 라이브러리 용도로 쓸거면 차라리 webpack을 쓰는 게 나을 것 같기도 하다.
 </p>
 </div>
 </div>
@@ -117,7 +117,7 @@ html-minifier는 이름에서 느낄 수 있듯이
 나머지 옵션은 아래 명령으로 도움말을 살펴보면 알 수 있다.
 </p>
 <div class="org-src-container">
-<pre class="src src-bash">html-miniifer --help
+<pre class="src src-bash">html-minifier --help
 </pre>
 </div>
 </div>
