--- a/note/emacs.html
+++ b/note/emacs.html
@@ -473,14 +473,21 @@ Overview of search tools for desktop and mobile; using Emacs and Ripgrep as desk
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/magit.html">Magit</a></h2>
+<h2><a class="article-link-title" href="/note/doom-emacs.html">Doom Emacs</a></h2>
 <div class="article-link-date">
-2020년 6월 8일 수정</div>
+2020년 6월 10일 수정</div>
 </div>
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/doom-emacs.html">Doom Emacs</a></h2>
+<h2><a class="article-link-title" href="/note/doom-emacs-shortcuts.html">Doom Emacs 단축키</a></h2>
+<div class="article-link-date">
+2020년 6월 10일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/magit.html">Magit</a></h2>
 <div class="article-link-date">
 2020년 6월 8일 수정</div>
 </div>
