update with 1 changes

--- a/note/lithum-ion-battery.html
+++ b/note/lithum-ion-battery.html
@@ -68,6 +68,8 @@
 <li><a href="#4ebc1540">충전기에 계속 꽂아둬도 된다</a></li>
 <li><a href="#2a2269f7">방전시키지 말자</a></li>
 <li><a href="#cb35fc5b">자주 충전해도 된다</a></li>
+<li><a href="#7c4e19a3">정품 충전기를 사용하자</a></li>
+<li><a href="#880c9b26">정품 혹은 인증된 케이블을 사용하자</a></li>
 <li><a href="#95363ad7">그냥 막 쓰자</a></li>
 </ul>
 </li>
@@ -142,6 +144,43 @@
 
 <p>
 따라서 상황이 된다면 조금 사용하고 자주 충전하자.
+</p>
+</div>
+</div>
+<div id="outline-container-7c4e19a3" class="outline-3">
+<h3 id="7c4e19a3">정품 충전기를 사용하자</h3>
+<div class="outline-text-3" id="text-7c4e19a3">
+<p>
+고속 충전의 경우 배터리 수명에 영향을 끼칠 수 있다.
+가급적 약하게 천천히 충전하는 것이 배터리 수명을 아끼는데 도움이 된다.
+</p>
+
+<p>
+하지만 정품 충전기의 경우
+어느 정도 효율적인 선으로 전압이 조절되어 있기 때문에
+그다지 걱정할 필요는 없다.
+</p>
+
+<p>
+단 여기서 이야기하는 정품 충전기란
+동일한 브랜드의 제품을 의미하는 것이 아니라
+해당 제품과 함께 번들된 충전기
+혹은 제조사에서 공인한 충전기를 의미한다.
+</p>
+</div>
+</div>
+<div id="outline-container-880c9b26" class="outline-3">
+<h3 id="880c9b26">정품 혹은 인증된 케이블을 사용하자</h3>
+<div class="outline-text-3" id="text-880c9b26">
+<p>
+케이블의 경우도 충전기와 함께 충전 효율에 영향을 줄 수 있다.
+특히 PD가 지원된는 케이블의 경우 전압이나 전류가 어느 정도 지원되냐에 따라
+충전 효율이 제각각이다.
+</p>
+
+<p>
+가장 좋은 방법은 제품에 번들된 케이블을 사용하거나
+해당 제조사에서 해당 제품용으로 별도로 판매하는 제품이다.
 </p>
 </div>
 </div>
