update with 6 changes

--- a/note/index.html
+++ b/note/index.html
@@ -58,6 +58,13 @@
 <h1><i class="material-icons md-light">list_alt</i> NOTE의 모든 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/uglify-js.html">UglifyJS</a></h2>
+<div class="article-link-date">
+2020년 6월 10일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/lithum-ion-battery.html">리튬 이온 배터리</a></h2>
 <div class="article-link-date">
 2020년 6월 10일 수정</div>
